--- a/shortdb.bib
+++ b/shortdb.bib
@@ -48,11 +48,11 @@ language={English}
 @InProceedings{le-zuidema:2014:EMNLP2014,
   author    = {Le, Phong  and  Zuidema, Willem},
   title     = {The Inside-Outside Recursive Neural Network model for Dependency Parsing},
-  booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  booktitle = {EMNLP-2014},
   month     = {October},
   year      = {2014},
   address   = {Doha, Qatar},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {729--739},
   url       = {http://www.aclweb.org/anthology/D14-1081}
 }
@@ -60,11 +60,11 @@ language={English}
 @InProceedings{chen-manning:2014:EMNLP2014,
   author    = {Chen, Danqi  and  Manning, Christopher},
   title     = {A Fast and Accurate Dependency Parser using Neural Networks},
-  booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  booktitle = {EMNLP-2014},
   month     = {October},
   year      = {2014},
   address   = {Doha, Qatar},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {740--750},
   url       = {http://www.aclweb.org/anthology/D14-1082}
 }
@@ -163,11 +163,11 @@ language={English}
 @InProceedings{martins-EtAl:2011:EMNLP1,
   author    = {Martins, Andre  and  Smith, Noah  and  Figueiredo, Mario  and  Aguiar, Pedro},
   title     = {Dual Decomposition with Many Overlapping Components},
-  booktitle = {Proceedings of the 2011 Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {EMNLP-2011},
   month     = {July},
   year      = {2011},
   address   = {Edinburgh, Scotland, UK.},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {238--249},
   url       = {http://www.aclweb.org/anthology/D11-1022}
 }
@@ -199,7 +199,7 @@ language={English}
 @incollection{NIPS2001_2089,
 title = {Convolution Kernels for Natural Language},
 author = {Michael Collins and Nigel Duffy},
-booktitle = {Advances in Neural Information Processing Systems 14},
+booktitle = {NIPS},
 editor = {T.G. Dietterich and S. Becker and Z. Ghahramani},
 pages = {625--632},
 year = {2002},
@@ -227,11 +227,11 @@ url = {http://papers.nips.cc/paper/2089-convolution-kernels-for-natural-language
 @InProceedings{charniak-johnson:2005:ACL,
   author    = {Charniak, Eugene  and  Johnson, Mark},
   title     = {Coarse-to-Fine n-Best Parsing and MaxEnt Discriminative Reranking},
-  booktitle = {Proceedings of the 43rd Annual Meeting of the Association for Computational Linguistics (ACL'05)},
+  booktitle = {ACL-2005},
   month     = {June},
   year      = {2005},
   address   = {Ann Arbor, Michigan},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {173--180},
   url       = {http://www.aclweb.org/anthology/P05-1022},
   doi       = {10.3115/1219840.1219862}
@@ -279,11 +279,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-EtAl:2014:P14-12,
   author    = {Zhang, Yuan  and  Lei, Tao  and  Barzilay, Regina  and  Jaakkola, Tommi  and  Globerson, Amir},
   title     = {Steps to Excellence: Simple Inference with Refined Scoring of Dependency Trees},
-  booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  booktitle = {ACL-2014},
   month     = {June},
   year      = {2014},
   address   = {Baltimore, Maryland},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {197--207},
   url       = {http://www.aclweb.org/anthology/P14-1019}
 }
@@ -291,11 +291,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{huang:2008:ACLMain,
   author    = {Huang, Liang},
   title     = {Forest Reranking: Discriminative Parsing with Non-Local Features},
-  booktitle = {Proceedings of ACL-08: HLT},
+  booktitle = {ACL-2008},
   month     = {June},
   year      = {2008},
   address   = {Columbus, Ohio},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {586--594},
   url       = {http://www.aclweb.org/anthology/P/P08/P08-1067}
 }
@@ -404,11 +404,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-clark:2011:EMNLP,
   author    = {Zhang, Yue  and  Clark, Stephen},
   title     = {Syntax-Based Grammaticality Improvement using {CCG} and Guided Search},
-  booktitle = {Proceedings of the 2011 Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {ACL-2011},
   month     = {July},
   year      = {2011},
   address   = {Edinburgh, Scotland, UK.},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {1147--1157},
   url       = {http://www.aclweb.org/anthology/D11-1106}
 }
@@ -436,7 +436,7 @@ url = {http://hal3.name/docs/#daume05search}
 @inproceedings{collins-roark:2004:ACL,
   author    = {Collins, Michael  and  Roark, Brian},
   title     = {Incremental Parsing with the Perceptron Algorithm},
-  booktitle = {Proceedings of the 42nd Meeting of the Association for Computational Linguistics (ACL'04), Main Volume},
+  booktitle = {ACL-2004},
   year      = 2004,
   month     = {July},
   address   = {Barcelona, Spain},
@@ -505,11 +505,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-blackwood-clark:2012:EACL2012,
   author    = {Zhang, Yue  and  Blackwood, Graeme  and  Clark, Stephen},
   title     = {Syntax-Based Word Ordering Incorporating a Large-Scale Language Model},
-  booktitle = {Proceedings of the 13th Conference of the European Chapter of the Association for Computational Linguistics},
+  booktitle = {EACL-2012},
   month     = {April},
   year      = {2012},
   address   = {Avignon, France},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {736--746},
   url       = {http://www.aclweb.org/anthology/E12-1075}
 }
@@ -557,7 +557,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{bohnet-EtAl:2010:PAPERS,
   author    = {Bohnet, Bernd  and  Wanner, Leo  and  Mill, Simon  and  Burga, Alicia},
   title     = {Broad Coverage Multilingual Deep Sentence Generation with a Stochastic Multi-Level Realizer},
-  booktitle = {Proceedings of the 23rd International Conference on Computational Linguistics (Coling 2010)},
+  booktitle = {Coling-2010},
   month     = {August},
   year      = {2010},
   address   = {Beijing, China},
@@ -624,11 +624,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{huang-fayong-guo:2012:NAACL-HLT,
   author    = {Huang, Liang  and  Fayong, Suphan  and  Guo, Yang},
   title     = {Structured Perceptron with Inexact Search},
-  booktitle = {Proceedings of the 2012 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  booktitle = {NAACL-2012},
   month     = {June},
   year      = {2012},
   address   = {Montr\'{e}al, Canada},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {142--151},
   url       = {http://www.aclweb.org/anthology/N12-1015}
 }
@@ -650,11 +650,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{wang-EtAl:2011:IJCNLP-2011,
   author    = {Wang, Yiou  and  Kazama, Jun'ichi  and  Tsuruoka, Yoshimasa  and  Chen, Wenliang  and  Zhang, Yujie  and  Torisawa, Kentaro},
   title     = {Improving Chinese Word Segmentation and POS Tagging with Semi-supervised Methods Using Large Auto-Analyzed Data},
-  booktitle = {Proceedings of 5th International Joint Conference on Natural Language Processing},
+  booktitle = {IJCNLP-2011},
   month     = {November},
   year      = {2011},
   address   = {Chiang Mai, Thailand},
-  publisher = {Asian Federation of Natural Language Processing},
+  publisher = {AFNLP},
   pages     = {309--317},
   url       = {http://www.aclweb.org/anthology/I11-1035}
 }
@@ -679,10 +679,10 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{collins:2002:EMNLP02,
   author    = {Michael Collins},
   title     = {Discriminative Training Methods for Hidden Markov Models: Theory and Experiments with Perceptron Algorithms},
-  booktitle = {Proceedings of the 2002 Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {EMNLP-2002},
   month     = {July},
   year      = {2002},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {1--8},
   url       = {http://www.aclweb.org/anthology/W02-1001},
   doi       = {10.3115/1118693.1118694}
@@ -777,15 +777,13 @@ url = {http://hal3.name/docs/#daume05search}
 @inproceedings{Lafferty:2001:CRF:645530.655813,
  author = {Lafferty, John D. and McCallum, Andrew and Pereira, Fernando C. N.},
  title = {Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data},
- booktitle = {Proceedings of the Eighteenth International Conference on Machine Learning},
- series = {ICML '01},
+ booktitle = {ICML 01},
  year = {2001},
  isbn = {1-55860-778-1},
  pages = {282--289},
  numpages = {8},
  url = {http://dl.acm.org/citation.cfm?id=645530.655813},
  acmid = {655813},
- publisher = {Morgan Kaufmann Publishers Inc.},
  address = {San Francisco, CA, USA},
 }
 
@@ -915,11 +913,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{chang-han:2010:EMNLP,
   author    = {Chang, Baobao  and  Han, Dongxu},
   title     = {Enhancing Domain Portability of Chinese Segmentation Model Using Chi-Square Statistics and Bootstrapping},
-  booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {EMNLP-2010},
   month     = {October},
   year      = {2010},
   address   = {Cambridge, MA},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {789--798},
   url       = {http://www.aclweb.org/anthology/D10-1077}
 }
@@ -982,11 +980,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-clark:2007:ACLMain,
   author    = {Zhang, Yue  and  Clark, Stephen},
   title     = {Chinese Segmentation with a Word-Based Perceptron Algorithm},
-  booktitle = {Proceedings of the 45th Annual Meeting of the Association of Computational Linguistics},
+  booktitle = {ACL-2007},
   month     = {June},
   year      = {2007},
   address   = {Prague, Czech Republic},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {840--847},
   url       = {http://www.aclweb.org/anthology/P07-1106}
 }
@@ -995,11 +993,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{sun-xu:2011:EMNLP,
   author    = {Sun, Weiwei  and  Xu, Jia},
   title     = {Enhancing Chinese Word Segmentation Using Unlabeled Data},
-  booktitle = {Proceedings of the 2011 Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {EMNLP-2011},
   month     = {July},
   year      = {2011},
   address   = {Edinburgh, Scotland, UK.},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {970--979},
   url       = {http://www.aclweb.org/anthology/D11-1090}
 }
@@ -1096,20 +1094,6 @@ url = {http://hal3.name/docs/#daume05search}
   doi       = {10.3115/1219840.1219886}
 }
 
-
-@InProceedings{jiang-EtAl:2013:ACL2013,
-  author    = {Jiang, Wenbin  and  Sun, Meng  and  L\"{u}, Yajuan  and  Yang, Yating  and  Liu, Qun},
-  title     = {Discriminative Learning with Natural Annotations: Word Segmentation as a Case Study},
-  booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
-  month     = {August},
-  year      = {2013},
-  address   = {Sofia, Bulgaria},
-  publisher = {Association for Computational Linguistics},
-  pages     = {761--769},
-  url       = {http://www.aclweb.org/anthology/P13-1075}
-}
-
-
 @InProceedings{zhang-kikui-sumita:2006:HLT-NAACL06-Short,
   author    = {Zhang, Ruiqiang  and  Kikui, Genichiro  and  Sumita, Eiichiro},
   title     = {Subword-based Tagging by Conditional Random Fields for Chinese Word Segmentation},
@@ -1126,7 +1110,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-nivre:2012:POSTERS,
   author    = {Zhang, Yue  and  Nivre, Joakim},
   title     = {Analyzing the Effect of Global Learning and Beam-Search on Transition-Based Dependency Parsing},
-  booktitle = {Proceedings of COLING 2012: Posters},
+  booktitle = {Colling-2012},
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
@@ -1459,7 +1443,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{bohnet-kuhn:2012:EACL2012,
   author    = {Bohnet, Bernd  and  Kuhn, Jonas},
   title     = {The Best of BothWorlds -- A Graph-based Completion Model for Transition-based Parsers},
-  booktitle = {Proceedings of the 13th Conference of the European Chapter of the Association for Computational Linguistics},
+  booktitle = {EACL-2012},
   month     = {April},
   year      = {2012},
   address   = {Avignon, France},
@@ -1485,11 +1469,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{martins-EtAl:2010:EMNLP,
   author    = {Martins, Andre  and  Smith, Noah  and  Xing, Eric  and  Aguiar, Pedro  and  Figueiredo, Mario},
   title     = {Turbo Parsers: Dependency Parsing by Approximate Variational Inference},
-  booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {EMNLP-2010},
   month     = {October},
   year      = {2010},
   address   = {Cambridge, MA},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {34--44},
   url       = {http://www.aclweb.org/anthology/D10-1004}
 }
@@ -1498,11 +1482,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{nivre-mcdonald:2008:ACLMain,
   author    = {Nivre, Joakim  and  McDonald, Ryan},
   title     = {Integrating Graph-Based and Transition-Based Dependency Parsers},
-  booktitle = {Proceedings of ACL-08: HLT},
+  booktitle = {ACL-2008},
   month     = {June},
   year      = {2008},
   address   = {Columbus, Ohio},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {950--958},
   url       = {http://www.aclweb.org/anthology/P/P08/P08-1108}
 }
@@ -1533,11 +1517,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-mcdonald:2012:EMNLP-CoNLL,
   author    = {Zhang, Hao  and  McDonald, Ryan},
   title     = {Generalized Higher-Order Dependency Parsing with Cube Pruning},
-  booktitle = {Proceedings of the 2012 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  booktitle = {EMNLP-2012},
   month     = {July},
   year      = {2012},
   address   = {Jeju Island, Korea},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {320--331},
   url       = {http://www.aclweb.org/anthology/D12-1030}
 }
@@ -1566,11 +1550,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{bohnet-nivre:2012:EMNLP-CoNLL,
   author    = {Bohnet, Bernd  and  Nivre, Joakim},
   title     = {A Transition-Based System for Joint Part-of-Speech Tagging and Labeled Non-Projective Dependency Parsing},
-  booktitle = {Proceedings of the 2012 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  booktitle = {EMNLP-2012},
   month     = {July},
   year      = {2012},
   address   = {Jeju Island, Korea},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {1455--1465},
   url       = {http://www.aclweb.org/anthology/D12-1133}
 }
@@ -1602,11 +1586,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-nivre:2011:ACL-HLT2011,
   author    = {Zhang, Yue  and  Nivre, Joakim},
   title     = {Transition-based Dependency Parsing with Rich Non-local Features},
-  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
+  booktitle = {ACL-2011},
   month     = {June},
   year      = {2011},
   address   = {Portland, Oregon, USA},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {188--193},
   url       = {http://www.aclweb.org/anthology/P11-2033}
 }
@@ -1653,11 +1637,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{mcdonald-EtAl:2005:HLTEMNLP,
   author    = {McDonald, Ryan  and  Pereira, Fernando  and  Ribarov, Kiril  and  Hajic, Jan},
   title     = {Non-Projective Dependency Parsing using Spanning Tree Algorithms},
-  booktitle = {Proceedings of Human Language Technology Conference and Conference on Empirical Methods in Natural Language Processing},
+  booktitle = {EMNLP-2005},
   month     = {October},
   year      = {2005},
   address   = {Vancouver, British Columbia, Canada},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {523--530},
   url       = {http://www.aclweb.org/anthology/H/H05/H05-1066}
 }
@@ -1666,11 +1650,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{goldberg-zhao-huang:2013:Short,
   author    = {Goldberg, Yoav  and  Zhao, Kai  and  Huang, Liang},
   title     = {Efficient Implementation of Beam-Search Incremental Parsers},
-  booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
-  publisher = {Association for Computational Linguistics},
+  publisher = {ACL},
   pages     = {628--633},
   url       = {http://www.aclweb.org/anthology/P13-2111}
 }
@@ -1679,7 +1663,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhu-EtAl:2013:ACL20131,
   author    = {Zhu, Muhua  and  Zhang, Yue  and  Chen, Wenliang  and  Zhang, Min  and  Zhu, Jingbo},
   title     = {Fast and Accurate Shift-Reduce Constituent Parsing},
-  booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
@@ -1692,7 +1676,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{nivre:2009:ACLIJCNLP,
   author    = {Nivre, Joakim},
   title     = {Non-Projective Dependency Parsing in Expected Linear Time},
-  booktitle = {Proceedings of the Joint Conference of the 47th Annual Meeting of the ACL and the 4th International Joint Conference on Natural Language Processing of the AFNLP},
+  booktitle = {ACL-2009},
   month     = {August},
   year      = {2009},
   address   = {Suntec, Singapore},
@@ -1705,7 +1689,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{rush-petrov:2012:NAACL-HLT,
   author    = {Rush, Alexander  and  Petrov, Slav},
   title     = {Vine Pruning for Efficient Multi-Pass Dependency Parsing},
-  booktitle = {Proceedings of the 2012 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  booktitle = {NAACL-2012},
   month     = {June},
   year      = {2012},
   address   = {Montr\'{e}al, Canada},
@@ -1718,7 +1702,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{choi-mccallum:2013:ACL2013,
   author    = {Choi, Jinho D.  and  McCallum, Andrew},
   title     = {Transition-based Dependency Parsing with Selectional Branching},
-  booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
@@ -1731,7 +1715,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-EtAl:2013:ACL20131,
   author    = {Zhang, Meishan  and  Zhang, Yue  and  Che, Wanxiang  and  Liu, Ting},
   title     = {Chinese Parsing Exploiting Characters},
-  booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
@@ -1744,7 +1728,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{huang-sagae:2010:ACL,
   author    = {Huang, Liang  and  Sagae, Kenji},
   title     = {Dynamic Programming for Linear-Time Incremental Parsing},
-  booktitle = {Proceedings of the 48th Annual Meeting of the Association for Computational Linguistics},
+  booktitle = {ACL-2010},
   month     = {July},
   year      = {2010},
   address   = {Uppsala, Sweden},
@@ -1757,10 +1741,9 @@ url = {http://hal3.name/docs/#daume05search}
     Publisher = {MIT Press}, 
     Title = {Semi-Markov Conditional Random Fields for Information Extraction}, 
     Url = {http://books.nips.cc/papers/files/nips17/NIPS2004_0427.pdf}, 
-    Booktitle = {Advances in Neural Information Processing Systems 17}, 
+    Booktitle = {NIPS 17}, 
     Author = {Sunita Sarawagi and William W. Cohen}, 
     Year = {2004}, 
-    Editor = {Lawrence K. Saul and Yair Weiss and Léon Bottou}, 
     Address = {Cambridge, MA}, 
     Pages = {1185-1192} 
    }
@@ -1776,5 +1759,260 @@ url = {http://hal3.name/docs/#daume05search}
   url       = {http://arxiv.org/abs/1511.06018},
   timestamp = {Tue, 01 Dec 2015 19:22:34 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KongDS15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@InProceedings{guo-EtAl:2014:EMNLP2014,
+  author    = {Guo, Jiang  and  Che, Wanxiang  and  Wang, Haifeng  and  Liu, Ting},
+  title     = {Revisiting Embedding Features for Simple Semi-supervised Learning},
+  booktitle = {EMNLP-2014},
+  month     = {October},
+  year      = {2014},
+  address   = {Doha, Qatar},
+  publisher = {ACL},
+  pages     = {110--120},
+  url       = {http://www.aclweb.org/anthology/D14-1012}
+}
+
+@InProceedings{jiang-EtAl:2013:ACL2013,
+  author    = {Jiang, Wenbin  and  Sun, Meng  and  L\"{u}, Yajuan  and  Yang, Yating  and  Liu, Qun},
+  title     = {Discriminative Learning with Natural Annotations: Word Segmentation as a Case Study},
+  booktitle = {ACL-2013},
+  month     = {August},
+  year      = {2013},
+  address   = {Sofia, Bulgaria},
+  publisher = {ACL},
+  pages     = {761--769},
+  url       = {http://www.aclweb.org/anthology/P13-1075}
+}
+
+@article{Collobert:2011:NLP:1953048.2078186,
+ author = {Collobert, Ronan and Weston, Jason and Bottou, L{\'e}on and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
+ title = {Natural Language Processing (Almost) from Scratch},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {2/1/2011},
+ month = nov,
+ year = {2011},
+ issn = {1532-4435},
+ numpages = {45},
+ url = {http://dl.acm.org/citation.cfm?id=1953048.2078186},
+ acmid = {2078186},
+} 
+
+@InProceedings{kim:2014:EMNLP2014,
+  author    = {Kim, Yoon},
+  title     = {Convolutional Neural Networks for Sentence Classification},
+  booktitle = {EMNLP-2014},
+  month     = {October},
+  year      = {2014},
+  address   = {Doha, Qatar},
+  publisher = {ACL},
+  pages     = {1746--1751},
+  url       = {http://www.aclweb.org/anthology/D14-1181}
+}
+
+@InProceedings{dyer-EtAl:2015:ACL-IJCNLP,
+  author    = {Dyer, Chris  and  Ballesteros, Miguel  and  Ling, Wang  and  Matthews, Austin  and  Smith, Noah A.},
+  title     = {Transition-Based Dependency Parsing with Stack Long Short-Term Memory},
+  booktitle = {ACL-2015},
+  month     = {July},
+  year      = {2015},
+  address   = {Beijing, China},
+  publisher = {ACL},
+  pages     = {334--343},
+  url       = {http://www.aclweb.org/anthology/P15-1033}
+}
+
+@InProceedings{pei-ge-chang:2014:P14-1,
+  author    = {Pei, Wenzhe  and  Ge, Tao  and  Chang, Baobao},
+  title     = {Max-Margin Tensor Neural Network for Chinese Word Segmentation},
+  booktitle = {ACL-2014},
+  month     = {June},
+  year      = {2014},
+  address   = {Baltimore, Maryland},
+  publisher = {ACL},
+  pages     = {293--303},
+  url       = {http://www.aclweb.org/anthology/P14-1028}
+}
+
+@InProceedings{ling-EtAl:2015:NAACL-HLT,
+  author    = {Ling, Wang  and  Dyer, Chris  and  Black, Alan W  and  Trancoso, Isabel},
+  title     = {Two/Too Simple Adaptations of Word2Vec for Syntax Problems},
+  booktitle = {NAACL-2015},
+  month     = {May--June},
+  year      = {2015},
+  address   = {Denver, Colorado},
+  publisher = {ACL},
+  pages     = {1299--1304},
+  url       = {http://www.aclweb.org/anthology/N15-1142}
+}
+
+@inproceedings{McCallum:2000:MEM:645529.658277,
+ author = {McCallum, Andrew and Freitag, Dayne and Pereira, Fernando C. N.},
+ title = {Maximum Entropy Markov Models for Information Extraction and Segmentation},
+ booktitle = {ICML},
+ year = {2000},
+ isbn = {1-55860-707-2},
+ pages = {591--598},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=645529.658277},
+ acmid = {658277},
+ address = {San Francisco, CA, USA},
+} 
+
+@InProceedings{yang-cardie:2012:EMNLP-CoNLL,
+  author    = {Yang, Bishan  and  Cardie, Claire},
+  title     = {Extracting Opinion Expressions with semi-Markov Conditional Random Fields},
+  booktitle = {EMNLP-2012},
+  month     = {July},
+  year      = {2012},
+  address   = {Jeju Island, Korea},
+  publisher = {ACL},
+  pages     = {1335--1345},
+  url       = {http://www.aclweb.org/anthology/D12-1122}
+}
+
+@InProceedings{passos-kumar-mccallum:2014:W14-16,
+  author    = {Passos, Alexandre  and  Kumar, Vineet  and  McCallum, Andrew},
+  title     = {Lexicon Infused Phrase Embeddings for Named Entity Resolution},
+  booktitle = {CoNLL-2014},
+  month     = {June},
+  year      = {2014},
+  address   = {Ann Arbor, Michigan},
+  publisher = {ACL},
+  pages     = {78--86},
+  url       = {http://www.aclweb.org/anthology/W14-1609}
+}
+
+@article{Ando:2005:FLP:1046920.1194905,
+ author = {Ando, Rie Kubota and Zhang, Tong},
+ title = {A Framework for Learning Predictive Structures from Multiple Tasks and Unlabeled Data},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {12/1/2005},
+ volume = {6},
+ month = dec,
+ year = {2005},
+ issn = {1532-4435},
+ pages = {1817--1853},
+ numpages = {37},
+ url = {http://dl.acm.org/citation.cfm?id=1046920.1194905},
+ acmid = {1194905},
+ publisher = {JMLR.org},
+} 
+
+@article{DBLP:journals/corr/HuangXY15,
+  author    = {Zhiheng Huang and
+               Wei Xu and
+               Kai Yu},
+  title     = {Bidirectional {LSTM-CRF} Models for Sequence Tagging},
+  journal   = {CoRR},
+  volume    = {abs/1508.01991},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1508.01991},
+  timestamp = {Tue, 01 Sep 2015 14:42:40 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/HuangXY15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@InProceedings{zheng-chen-xu:2013:EMNLP,
+  author    = {Zheng, Xiaoqing  and  Chen, Hanyang  and  Xu, Tianyu},
+  title     = {Deep Learning for {Chinese} Word Segmentation and {POS} Tagging},
+  booktitle = {EMNLP-2013},
+  month     = {October},
+  year      = {2013},
+  address   = {Seattle, Washington, USA},
+  publisher = {ACL},
+  pages     = {647--657},
+  url       = {http://www.aclweb.org/anthology/D13-1061}
+}
+
+@article{Erhan:2010:WUP:1756006.1756025,
+ author = {Erhan, Dumitru and Bengio, Yoshua and Courville, Aaron and Manzagol, Pierre-Antoine and Vincent, Pascal and Bengio, Samy},
+ title = {Why Does Unsupervised Pre-training Help Deep Learning?},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {3/1/2010},
+ month = mar,
+ year = {2010},
+ issn = {1532-4435},
+ numpages = {36},
+ url = {http://dl.acm.org/citation.cfm?id=1756006.1756025},
+ acmid = {1756025},
+ publisher = {JMLR.org},
+}
+
+@article{DBLP:journals/corr/MikolovSCCD13,
+  author    = {Tomas Mikolov and
+               Ilya Sutskever and
+               Kai Chen and
+               Greg Corrado and
+               Jeffrey Dean},
+  title     = {Distributed Representations of Words and Phrases and their Compositionality},
+  journal   = {CoRR},
+  volume    = {abs/1310.4546},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1310.4546},
+  timestamp = {Thu, 07 May 2015 20:02:01 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/MikolovSCCD13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@InProceedings{sun-EtAl:2009:NAACLHLT09,
+  author    = {Sun, Xu  and  Zhang, Yaozhong  and  Matsuzaki, Takuya  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
+  title     = {A Discriminative Latent Variable Chinese Segmenter with Hybrid Word/Character Information},
+  booktitle = {NAACL-2009},
+  month     = {June},
+  year      = {2009},
+  address   = {Boulder, Colorado},
+  publisher = {ACL},
+  pages     = {56--64},
+  url       = {http://www.aclweb.org/anthology/N/N09/N09-1007}
+}
+
+@InProceedings{ratinov-roth:2009:CoNLL,
+  author    = {Ratinov, Lev  and  Roth, Dan},
+  title     = {Design Challenges and Misconceptions in Named Entity Recognition},
+  booktitle = {CoNLL-2009},
+  month     = {June},
+  year      = {2009},
+  address   = {Boulder, Colorado},
+  publisher = {ACL},
+  pages     = {147--155},
+  url       = {http://www.aclweb.org/anthology/W09-1119}
+}
+
+@InProceedings{andrew:2006:EMNLP,
+  author    = {Andrew, Galen},
+  title     = {A Hybrid Markov/Semi-Markov Conditional Random Field for Sequence Segmentation},
+  booktitle = {EMNLP-2006},
+  month     = {July},
+  year      = {2006},
+  address   = {Sydney, Australia},
+  publisher = {ACL},
+  pages     = {465--472},
+  url       = {http://www.aclweb.org/anthology/W/W06/W06-1655}
+}
+
+@article{optize-and-maclin-JAIR99,
+  author    = {David Opitz and Richard Maclin},
+  title     = {Popular Ensemble Methods: An Empirical Study},
+  journal   = {J. Artif. Intell. Res. {(JAIR)}},
+  volume    = {11},
+  pages     = {169-198},
+  year      = {1999},
+  url       = {https://dx.doi.org/10.1613%2Fjair.614},
+  doi       = {10.1613/jair.4212},
+}
+
+@article{DBLP:journals/corr/ZarembaSV14,
+  author    = {Wojciech Zaremba and
+               Ilya Sutskever and
+               Oriol Vinyals},
+  title     = {Recurrent Neural Network Regularization},
+  journal   = {CoRR},
+  volume    = {abs/1409.2329},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.2329},
+  timestamp = {Wed, 01 Oct 2014 15:00:04 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/ZarembaSV14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
