--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2016,3 +2016,50 @@ url = {http://hal3.name/docs/#daume05search}
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/ZarembaSV14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+@article{Hochreiter:1997:LSM:1246443.1246450,
+ author = {Hochreiter, Sepp and Schmidhuber, J\"{u}rgen},
+ title = {Long Short-Term Memory},
+ journal = {Neural Comput.},
+ issue_date = {November 15, 1997},
+ volume = {9},
+ number = {8},
+ month = nov,
+ year = {1997},
+ issn = {0899-7667},
+ pages = {1735--1780},
+ numpages = {46},
+ url = {http://dx.doi.org/10.1162/neco.1997.9.8.1735},
+ doi = {10.1162/neco.1997.9.8.1735},
+ acmid = {1246450},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+@InProceedings{okanohara-EtAl:2006:COLACL,
+  author    = {Okanohara, Daisuke  and  Miyao, Yusuke  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
+  title     = {Improving the Scalability of Semi-Markov Conditional Random Fields for Named Entity Recognition},
+  booktitle = {ACL-2006},
+  month     = {July},
+  year      = {2006},
+  address   = {Sydney, Australia},
+  publisher = {ACL},
+  pages     = {465--472},
+  url       = {http://www.aclweb.org/anthology/P06-1059},
+  doi       = {10.3115/1220175.1220234}
+}
+@InProceedings{pennington-socher-manning:2014:EMNLP2014,
+  author    = {Pennington, Jeffrey  and  Socher, Richard  and  Manning, Christopher},
+  title     = {Glove: Global Vectors for Word Representation},
+  booktitle = {EMNLP-2014},
+  month     = {October},
+  year      = {2014},
+  address   = {Doha, Qatar},
+  publisher = {ACL},
+  pages     = {1532--1543},
+  url       = {http://www.aclweb.org/anthology/D14-1162}
+}
+@phdthesis{liang2005semi,
+  title={Semi-supervised learning for natural language},
+  author={Liang, Percy},
+  year={2005},
+  school={Citeseer}
+}
